style: fix alignment

--- a/css/index.css
+++ b/css/index.css
@@ -9,55 +9,54 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 80px 60px;
+    padding: 10px 10px;
     background: linear-gradient(to right, #667eea, #764ba2);
     color: #fff;
 }
 
 header .logo {
-    font-size: 120px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 .content {
     text-align: center;
-    padding: 60px 20px;
+    padding: 20px;
 }
 
 .profile-img {
-    width: 220px;
-    height: 220px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .name {
-    font-size: 80px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 20px;
     margin-top: 20px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
 }
 
 .bio {
-    font-size: 40px;
-    max-width: 600px;
+    font-size: 20px;
+    max-width: 60px;
     margin: 20px auto 40px;
     color: #444;
-    line-height: 1.6;
     word-break: break-word;
 }
 
 .web {
-    font-size: 60px;
-    max-width: 600px;
+    font-size: 20px;
+    max-width: 60px;
     margin: 40px auto 60px;
     color: #444;
 }
 
 .social-icons img {
-    width: 120px;
-    height: 120px;
+    width: 20px;
+    height: 20px;
     margin-left: 15px;
     vertical-align: middle;
 }
@@ -111,21 +110,21 @@ footer {
     width: 100%;
     background: linear-gradient(to right, #764ba2, #667eea);
     text-align: center;
-    padding: 20px 20px;
+    padding: 5px 5px;
     color: #fff;
 }
 
 
 
 footer .social-footer a img {
-    width: 120px;
-    height: 120px;
+    width: 20px;
+    height: 20px;
     margin: 0 10px;
     vertical-align: bottom
 }
 
 footer p {
-    font-size: 60px;
+    font-size: 10px;
     font-weight: bold;
     margin-top: 20px;
 }
